Fix horizontal scrolling due to the use of paddings instead of margins

--- a/style.css
+++ b/style.css
@@ -184,7 +184,8 @@ header .header-items {
     width: 100%;
     display: flex;
     justify-content: center;
-    padding: 80px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 .sign-up-items {
@@ -239,5 +240,6 @@ footer {
     justify-content: center;
     align-items: center;
     color:#e5e7eb;
-    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
